--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "ai-pr-review-action",
   "version": "0.1.0",
   "private": true,
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "ncc build src/index.js -o dist --source-map --license licenses.txt",
+    "prepare": "npm run build"
+  },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.3"
   }
 }
