Add comment_marker input for multi-job support, use github.token in examples

--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,10 @@ inputs:
     description: "Extra reviewer instructions"
     required: false
     default: ""
+  comment_marker:
+    description: "Unique marker for sticky comments (use different values for multi-job setups)"
+    required: false
+    default: "AI_PR_REVIEW"
 runs:
   using: "node20"
   main: "dist/index.js"
